# Parallel-programming

./: CMakeLists.txt  size_time_graph.html  verify.py  Отчет.txt
src/: matrix_generator.cpp  matrix_multiplier.cpp
